--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
     <script src="build/js/vendor.min.js"></script>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="build/js/app.js"></script>
-    <title>blank-js-project</title>
+    <title>Doctor Lookup</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Doctor Lookup</h1>
+      <form id="lookup-issue">
+        <label for="input-issue">Issue:</label>
+         <input id="issue" type="text">
+          <button id="issue-submit" type="submit">SUBMIT</button>
+      </form>
+      <form id="lookup-name">
+        <label for="input-name">Doctor Name:</label>
+         <input id="name" type="text">
+          <button id="name-submit" type="submit">SUBMIT</button>
+      </form>
+    </div>
   </body>
 </html>
