--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
          <input id="name" type="text">
           <button id="name-submit" type="submit">SUBMIT</button>
       </form>
+      <div id="result">
+      </div>
     </div>
   </body>
 </html>
