create reload button.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
           <button id="name-submit" type="submit">SUBMIT</button>
       </form>
 
-
         <div id="result">
         </div>
-    
 
+    <button id="reload" class="btn btn-info" type="button">Reload Page</button>
     </div>
   </body>
 </html>
